--- a/other.css
+++ b/other.css
@@ -5,4 +5,8 @@ background: -o-linear-gradient(top, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%,
 background: -ms-linear-gradient(top, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%, rgba(92,134,240,1) 32%, rgba(55,89,169,1) 57%, rgba(231,55,39,1) 100%);
 background: linear-gradient(to bottom, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%, rgba(92,134,240,1) 32%, rgba(55,89,169,1) 57%, rgba(231,55,39,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#59f731', endColorstr='#e73727', GradientType=0 );
+background-attachment: fixed
+  }
+html {
+    height: 100%
 }
