--- a/other.css
+++ b/other.css
@@ -1,12 +1,14 @@
 body {
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(89,247,49,1)), color-stop(0%, rgba(38,247,240,1)), color-stop(32%, rgba(92,134,240,1)), color-stop(57%, rgba(55,89,169,1)), color-stop(100%, rgba(231,55,39,1)));
-background: -webkit-linear-gradient(top, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%, rgba(92,134,240,1) 32%, rgba(55,89,169,1) 57%, rgba(231,55,39,1) 100%);
-background: -o-linear-gradient(top, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%, rgba(92,134,240,1) 32%, rgba(55,89,169,1) 57%, rgba(231,55,39,1) 100%);
-background: -ms-linear-gradient(top, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%, rgba(92,134,240,1) 32%, rgba(55,89,169,1) 57%, rgba(231,55,39,1) 100%);
-background: linear-gradient(to bottom, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%, rgba(92,134,240,1) 32%, rgba(55,89,169,1) 57%, rgba(231,55,39,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#59f731', endColorstr='#e73727', GradientType=0 );
-/*background-attachment: fixed*/
-  }
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(89,247,49,1)), color-stop(0%, rgba(38,247,240,1)), color-stop(32%, rgba(92,134,240,1)), color-stop(57%, rgba(55,89,169,1)), color-stop(100%, rgba(231,55,39,1)));
+  background: -webkit-linear-gradient(top, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%, rgba(92,134,240,1) 32%, rgba(55,89,169,1) 57%, rgba(231,55,39,1) 100%);
+  background: -o-linear-gradient(top, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%, rgba(92,134,240,1) 32%, rgba(55,89,169,1) 57%, rgba(231,55,39,1) 100%);
+  background: -ms-linear-gradient(top, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%, rgba(92,134,240,1) 32%, rgba(55,89,169,1) 57%, rgba(231,55,39,1) 100%);
+  background: linear-gradient(to bottom, rgba(89,247,49,1) 0%, rgba(38,247,240,1) 0%, rgba(92,134,240,1) 32%, rgba(55,89,169,1) 57%, rgba(231,55,39,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#59f731', endColorstr='#e73727', GradientType=0 );
+}
 html {
     min-height: 100%
+}
+h1 {
+  color:#000066;
 }
