--- a/other.css
+++ b/other.css
@@ -15,8 +15,10 @@ h1 {
   border: 5px solid red;
   border-radius: 15px 50px;
   background: #ff8080;
-  padding: 200px; 
-  width: 300px;
+  padding: 20px; 
+  width: 250px;
   height: 50px;
   font-family: "Comic Sans MS"
+  position: relative;
+  left: 60px;
 }
