--- a/other.css
+++ b/other.css
@@ -18,7 +18,7 @@ h1 {
   padding: 20px; 
   width: 250px;
   height: 50px;
-  font-family: "Comic Sans MS"
+  font-family: "Comic Sans MS";
   position: relative;
   left: 30px;
   margin-left: 40px;
