--- a/contactme.css
+++ b/contactme.css
@@ -1,191 +1,192 @@
-@import "compass/css3";
-
-// Font imports
-
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-
-// Color vars
-
-$white: #fff;
-$grey: #ccc;
-$dark_grey: #555;
-$blue: #4f6fad;
-$pink: #ee9cb4;
-
-// Mixins
-
-@mixin lato-book { font-family: 'Lato', sans-serif; font-weight: 300; }
-@mixin lato-reg { font-family: 'Lato', sans-serif; font-weight: 400; }
-@mixin lato-bold { font-family: 'Lato', sans-serif; font-weight: 700; }
-@mixin btn($color) {
-  background-color: $color;
-  border-bottom-color: darken($color, 15%);
-  &:hover {
-      background-color: lighten($color, 5%);
-    }
+// Grid
+@mixin grid($column) {
+	  width:(100% / 12) * $column;
+	  margin:0 auto;
 }
 
-// Functions
-
-@function pxtoem($target, $context){
-  @return ($target/$context)+0em;
+// Transition Ease
+@mixin ease($time:333ms, $attr:all, $curve:ease-in-out) {
+	  -webkit-transition: $attr $time $curve;
+	  -moz-transition: $attr $time $curve;
+	  -o-transition: $attr $time $curve;
+	  -ms-transition: $attr $time $curve;
+	  transition: $attr $time $curve;
 }
 
-//
+//-- Lato --//
+@mixin lato-1 {font-family: 'Lato', sans-serif; font-weight:100;}
+@mixin lato-1-i {@include lato-1; font-style:italic;}
+
+@mixin lato-3 {font-family: 'Lato', sans-serif; font-weight:300;}
+@mixin lato-3-i {@include lato-3; font-style:italic;}
+
+@mixin lato-4 {font-family: 'Lato', sans-serif; font-weight:400;}
+@mixin lato-4-i {@include lato-4; font-style:italic;}
+
+@mixin lato-7 {font-family: 'Lato', sans-serif; font-weight:700;}
+@mixin lato-7-i {@include lato-7; font-style:italic;}
+
+@mixin lato-9 {font-family: 'Lato', sans-serif; font-weight:900;}
+@mixin lato-9-i {@include lato-9; font-style:italic;}
+
+
+// Colors
+$blue:#313A3D;
+$orange:#FD9638;
+$dark-orange:darken($orange, 20%);
+$grey:#B6B6B6;
+$light-grey:lighten($grey, 15%);
+
+$background:#efefef;
+$field-color:#E8E9EA;
+
+
+
+
 
 body {
-  background-color: lighten($grey, 10%);
-  font-size: 100%;
-  @include lato-reg;
-}
-div, textarea, input {
-  @include box-sizing(border-box); 
-}  
-.container {  
-  max-width: 510px;
-  min-width: 324px;
-  margin: 50px auto 0px;
-  background-color: $white;
-  border: 1px solid lighten($grey, 1%); 
-  border-bottom: 3px solid $grey;
-}
-.row {
-  width: 100%;
-  margin: 0 0 1em 0;
-  padding: 0 2.5em;
-  &.header {
-    padding: 1.5em 2.5em;
-    border-bottom: 1px solid $grey; 
-    background: url(http://niiiick.com/files/blur-city-1.jpg) left -80px;
-    color: $white;
-  }
-  &.body {
-    padding: .5em 2.5em 1em;
-  }
-}
-.pull-right {
-  float: right; 
-}
-h1 {
-  @include lato-book;
-  display: inline-block;
-  font-weight: 100;
-  font-size: pxtoem(45, 16);
-  border-bottom: 1px solid hsla(100%, 100%, 100%, 0.3);
-  margin: 0 0 0.1em 0;
-  padding: 0 0 0.4em 0;
-}
-h3 {
-  @include lato-reg;
-  font-size: pxtoem(20, 16);
-  margin: 1em 0 0.4em 0;
-}
-.btn {
-  font-size: pxtoem(17, 16);
-  display: inline-block;
-  padding: 0.74em 1.5em;
-  margin: 1.5em 0 0;
-  color: $white;
-  border-width: 0 0 0 0;
-  border-bottom: 5px solid;
-  text-transform: uppercase;
-  @include btn(darken($grey, 10%));
-  @include lato-book;
-  &.btn-submit {
-    @include btn($blue);
-  }
-}
+	  background:$background;
+	  font-size:62.5%;
+	  @include lato-3;
+	  color:$grey;
 
-form {
-  max-width: 100%;
-  display: block;
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    li {
-      margin: 0 0 0.25em 0; 
-      clear: both;
-      display: inline-block;
-      width: 100%;
-      &:last-child {
-          margin: 0;    
-        }
-        p {
-          margin: 0;
-          padding: 0;
-          float: left;
-          &.right {
-            float: right;
-          }
-        }     
-        .divider {
-          margin: 0.5em 0 0.5em 0;
-          border: 0;
-          height: 1px;
-          width: 100%;
-          display: block;
-          background-color: $blue;
-          background-image: linear-gradient(to right, $pink, $blue);
-        }
-        .req {
-          color: $pink; 
-        }
+  section {
+	    background:white;
+    margin:60px auto 120px;
+    border-top:15px solid $blue;
+    text-align:center;
+  	  padding:50px 0 110px;
+    width:80%;
+    max-width:1100px;
+    
+    h1 {
+      margin-bottom:40px;
+      font-size:4em;
+      text-transform:uppercase;
+      @include lato-1;
     }
   }
-  label {
-    display: block;
-    margin: 0 0 0.5em 0;
-    color: $blue;
-    font-size: pxtoem(16, 16);
-  }
-  input {
-    margin: 0 0 0.5em 0;
-    border: 1px solid $grey;
-    padding: 6px 10px;
-    color: $dark_grey;
-    font-size: pxtoem(16, 16);
-  }
-  textarea {
-    border: 1px solid $grey;
-    padding: 6px 10px;
-    width: 100%;
-    color: $dark_grey;
-  }
-  small {
-    color: $blue;
-    margin: 0 0 0 0.5em;
-  }
 }
 
-// Media Queries
+// Form
+form {
+		  @include grid(7);
 
-@media only screen and (max-width:480px) {
-  .pull-right {
-    float: none; 
-  }
-  input {
-    width: 100%; 
-  }
-  label {
-    width: 100%;
-    display: inline-block;
-    float: left;
-    clear: both;
-  }
-  li, p {
-   width: 100%; 
-  }
-  input.btn {
-   margin: 1.5em 0 0.5em; 
-  }
-  h1 {
-   font-size: pxtoem(36, 16); 
-  }
-  h3 {
-    font-size: pxtoem(18, 16)
-  }
-  li small {
-   display: none; 
-  }
-}
+		  .field {
+			    width:100%;
+			    position:relative;
+			    margin-bottom:15px;
+
+    			$hover-label-width:18%;
+			    $placeholder-bumper:1.5%;
+			    $label-padding:18px;
+
+    			// Label
+			    label {
+				      text-transform: uppercase;
+				      position:absolute;
+				      top:0;
+				      left:0;
+				      background:$blue;
+				      width:100%;
+				      padding:($label-padding + 0px) 0;
+				      font-size: 1.45em;
+				      letter-spacing: 0.075em;
+
+				      @include ease(333ms);
+
+				      // Checkmark
+				      + span {
+					        font-family: 'SSStandard';
+					        opacity: 0;
+					        color:white;
+				        	display: block;
+					        position:absolute;
+					        top: 12px;
+					        left: 7%;
+					        font-size: 2.5em;
+					        text-shadow:1px 2px 0 $dark-orange;
+
+					        @include ease(333ms);
+			      	}
+			    }
+
+    			// Fields
+		    	input[type="text"],
+			    textarea {
+				      border:none;
+				      background:$field-color;
+				      width:100% - $hover-label-width - $placeholder-bumper;
+				      margin:0;
+				      padding:$label-padding 0;
+				      padding-left:$hover-label-width + $placeholder-bumper;
+				      color:$blue;
+				      font-size: 1.4em;
+				      letter-spacing: 0.05em;
+				      text-transform: uppercase;
+
+				      &#msg {
+					        height: 18px;
+					        resize: none;
+					        @include ease(333ms);
+				      }
+
+      				// Focus and JS Toggle Class
+				      &:focus,
+				      &.focused {
+					        outline:none;
+
+        					&#msg {
+						          padding-bottom:150px;
+					        }
+
+        					+ label {
+						          width:$hover-label-width;
+						          background:$orange;
+						          color:$blue;
+					        }
+				      }
+
+      				// JS Toggle Class
+				      &.focused {
+					        + label {
+						          color: $orange;
+					        }
+				      }
+			    }
+
+    			// Field Hover
+			    &:hover {
+				      label {
+					        width:$hover-label-width;
+					        background:$blue;
+					        color:white;
+				      }
+			    }
+		  }
+
+		  // Submit Button
+		  input[type="submit"] {
+			    background:$orange;
+			    color:white;
+			    -webkit-appearance: none;
+			    border: none;
+			    text-transform: uppercase;
+    position:relative;
+		    padding: 13px 50px;
+		    font-size: 1.4em;
+		    letter-spacing: 0.1em;
+		    @include lato-3;
+		    @include ease;
+        
+    			&:hover {
+				      background:$blue;
+				      color:$orange;
+			    }
+
+    			&:focus {
+				      outline:none;
+				      background:$dark-orange;
+			    }
+		  }
+	}
