--- a/other.css
+++ b/other.css
@@ -4,10 +4,10 @@ body {
 h1 {
   color:#000066;
   text-align: center;
-  border: 1px solid green;
+  border: 2px solid green;
   border-radius: 6px 50px;
-  background: #ffff80;
-  padding: 20px; 
+  background: #ccff66;
+  padding: 0px; 
   width: 300px;
   height: 50px;
   font-family: "Comic Sans MS";
