--- a/other.css
+++ b/other.css
@@ -7,10 +7,11 @@ h1 {
   border: 2px solid green;
   border-radius: 6px 50px;
   background: #ccff66;
-  padding: 0px; 
+  padding: 20px; 
   width: 300px;
   height: 50px;
   font-family: "Comic Sans MS";
+  display: inline-block;
 }
 #primary_nav_wrap
 {
