--- a/other.css
+++ b/other.css
@@ -1,6 +1,9 @@
 body {
  background-color: #0066ff;
 }
+#emoji {
+	display: inline-block;
+}
 h1 {
   color:#000066;
   text-align: center;
@@ -8,8 +11,6 @@ h1 {
   border-radius: 6px 50px;
   background: #ccff66;
   padding: 20px; 
-  width: 300px;
-  height: 50px;
   font-family: "Comic Sans MS";
   display: inline-block;
 }
