--- a/giveaways.css
+++ b/giveaways.css
@@ -43,4 +43,14 @@ button {
 	text-align: center;
 	margin-top: 15px;
 }
+#p4_pic{
+	display:none;
+}
+#xone_pic{
+	display:none;
+}
+#6s_pic{
+	display: none;
+}
+}
 }
