--- a/other.css
+++ b/other.css
@@ -101,10 +101,10 @@ h1 {
 }
 #copyright {
 	width:100%;
-	background-color:#5c5c3d;
+	background-color:#ccccb3;
 	position: absolute;
 	bottom: 0;
-	height: 30px;
+	height: 50px;
 }
 h3 {
 	color: white;
