--- a/gmn.css
+++ b/gmn.css
@@ -1,4 +1,4 @@
-h1, h3, form, button{
+h1, h3, form, {
 	text-align:center;
 }
 
@@ -12,15 +12,14 @@ button {
 	-moz-border-radius:28px;
 	-webkit-border-radius:28px;
 	border-radius:28px;
-	border:1px solid #18ab29;
+	border:2px solid #18ab29;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
 	font-size:17px;
-	padding:16px 31px;
+	padding:4px 17px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #2f6627;
 }
 button:hover {
 	background-color:#5cbf2a;
@@ -29,3 +28,7 @@ button:active {
 	position:relative;
 	top:1px;
 }
+button{
+	display:inline-block;
+}
+     
