--- a/giveaways.css
+++ b/giveaways.css
@@ -65,7 +65,7 @@ button {
 	margin-top: 15px;
 }
 h1 {
-	color:#e60000;
+	color:#00ff99;
 	font-family: cursive;
 	font-variant: small-caps;
 	font-weight: bold;
