--- a/gmn.css
+++ b/gmn.css
@@ -38,9 +38,10 @@ body {
 	position: fixed;
 	left:0px;
 	top:0px;
-	width: 340px;
+	width: 300px;
 	height: 100%;
 	background-color: #2491f9;
+	overflow:auto;
 }
 h2 {
 	font-family: cursive;
