--- a/contactsteven.css
+++ b/contactsteven.css
@@ -1,31 +1,16 @@
 form{
   text-align:center
 }
-body {
-    font-family: Helvetica sans-serif;
-    padding: 0;
-    margin: 0;
-    background-color: #222;
-    overflow: hidden;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-         -o-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-}
+body{
+	 background-color: #000000;
+   padding: 0px;
+   margin: 0px;
+ }
 
-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.info {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 5px 15px;
-    color: #eee;
-    font-size: 13px;
-    background-color: rgba(0, 0, 0, .5);
+#gradient
+{
+  width: 100%;
+  height: 800px;
+  padding: 0px;
+  margin: 0px;
 }
