--- a/other.css
+++ b/other.css
@@ -119,5 +119,13 @@ h3 {
 	height: 80px;
 	background: grey;
 }
+#prosite {
+	text-decoration:none;
+}
+#prosite:hover {
+	color:#ff3333;
+	font-size:150%;
+}
+
 }
 }
