--- a/contactsteven.css
+++ b/contactsteven.css
@@ -8,8 +8,8 @@ video {
     left: 50%;
     min-width: 100%;
     min-height: 100%;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
     z-index: -100;
     transform: translateX(-50%) translateY(-50%);
   background-size: cover;
