--- a/bsw.css
+++ b/bsw.css
@@ -4,3 +4,11 @@ h1 , img {
 #door{
 	text-align:center;
 }
+ h2, img{
+ 	text-align: center;
+ 	font-size:;
+ }
+ img.switch{
+ 	width:220;
+ 	height:295;
+ }
