--- a/anabel19992309.css
+++ b/anabel19992309.css
@@ -1,5 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Droid+Serif);
-@import "compass";
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif); "compass";
 
 body {
   font-family: 'Droid Serif', serif;
